[package]
edition = "2024"
version = "0.1.0"
name    = "stm32h723zg"

[[bin]]
test  = false
bench = false
name  = "stm32h723zg"

[dependencies]
defmt.workspace             = true
embedded-io.workspace       = true
embedded-io-async.workspace = true
defmt-rtt                   = "1.1"
embassy-sync                = "0.7"
cortex-m-rt                 = "0.7.3"
embedded-hal                = "1.0.0"
embedded-storage            = "0.3.1"
embedded-hal-async          = "1.0.0"
panic-probe                 = { version = "1.0", features = ["print-defmt"] }
cortex-m                    = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-time                = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor            = { workspace = true, features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-stm32               = { version = "0.4", features = ["defmt", "stm32h723zg", "unstable-pac", "memory-x", "time-driver-any"] }
