[workspace]

[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver"] }
log = "0.4"
static_cell = "2.1"

[dependencies.embassy-executor]
version = "0.7.0"
features = ["log"]

[dependencies.embassy-time]
version = "0.4.0"
features = ["tick-hz-10_000"]

[build-dependencies]
zephyr-build = "0.1.0"

[features]
default = ["executor-zephyr"]
executor-zephyr = ["zephyr/executor-zephyr"]
