[package]
name    = "mdbook-gen"
version = "0.0.0"
edition = "2021"

[dependencies]
quote                   = "1.0" # syn = { workspace = true }
proc-macro2             = "1.0"
macro_state             = "0.2.0"
convert_case            = "0.6.0"
sublime-color-scheme    = "0.1.4"
dioxus-rsx              = "0.7.1" # dioxus-rsx = { workspace = true }
dioxus-autofmt.version  = "0.7.3" # dioxus-autofmt = { workspace = true }
syn                     = "2.0.98"
anyhow                  = "1.0.71"
serde_json              = "1.0.96"
pulldown-cmark          = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
prettyplease            = "0.2.20"
once_cell               = "1.20.2"
mdbook-shared.path      = "../mdbook-shared"
postcard                = { version = "1.0.4", features = ["use-std"] }
serde                   = { version = "1.0.163", features = ["derive"] }
syntect                 = { version = "5.2.0", features = ["plist-load"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default  = ["manganis"]
manganis = []
